--- a/display-location.html
+++ b/display-location.html
@@ -8,6 +8,7 @@
     <div id="map" style="width: 900px; height: 580px"></div>
     <button onclick="fetchAndDisplayLocation()">Fetch Mobile Location</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         var mapOptions = {
             center: [23.25469000, 77.40289000],
@@ -15,35 +16,49 @@
         }
 
         var map = L.map('map', mapOptions);
-
         var layer = new L.TileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
         map.addLayer(layer);
 
         var mobileLocationMarker;
 
-        async function fetchAndDisplayLocation() {
+        function fetchAndDisplayLocation() {
             var name = prompt("Please enter your name:");
             if (name !== null && name !== "") {
-                const response = await fetch(`https://project2-3dlj.onrender.com/get-location/${name}`);
-                const data = await response.json();
-                if (data && data.latitude && data.longitude) {
-                    var lat = data.latitude;
-                    var lng = data.longitude;
-                    map.setView([lat, lng], 15);
+                const response = fetch(`https://project2-3dlj.onrender.com/get-location/${name}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data && data.latitude && data.longitude) {
+                            var lat = data.latitude;
+                            var lng = data.longitude;
+                            map.setView([lat, lng], 15);
 
-                    if (mobileLocationMarker) {
-                        map.removeLayer(mobileLocationMarker);
-                    }
+                            if (mobileLocationMarker) {
+                                map.removeLayer(mobileLocationMarker);
+                            }
 
-                    mobileLocationMarker = L.marker([lat, lng]).addTo(map)
-                        .bindPopup(`${name}'s mobile is here!`).openPopup();
-                } else {
-                    alert('No location data available for the provided name');
-                }
+                            mobileLocationMarker = L.marker([lat, lng]).addTo(map)
+                                .bindPopup(`${name}'s mobile is here!`).openPopup();
+                        } else {
+                            alert('No location data available for the provided name');
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error fetching location:', error);
+                    });
             } else {
                 alert('Name cannot be empty');
             }
         }
+
+        var socket = io();
+        socket.on('locationUpdate', function(data) {
+            var { name, latestLocation } = data;
+            if (mobileLocationMarker) {
+                map.removeLayer(mobileLocationMarker);
+            }
+            mobileLocationMarker = L.marker([latestLocation.latitude, latestLocation.longitude]).addTo(map)
+                .bindPopup(`${name}'s mobile is here!`).openPopup();
+        });
     </script>
 </body>
 </html>
