--- a/public/sendlocation.html
+++ b/public/sendlocation.html
@@ -7,31 +7,26 @@
 </head>
 <body>
     <h1>Send Location</h1>
-    <form id="locationForm">
-        <label for="latitude">Latitude:</label>
-        <input type="text" id="latitude" name="latitude" required><br><br>
-        <label for="longitude">Longitude:</label>
-        <input type="text" id="longitude" name="longitude" required><br><br>
-        <button type="submit">Send Location</button>
-    </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script>
         // Connect to the server via Socket.IO
         var socket = io();
 
-        // Handle form submission
-        document.getElementById('locationForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            // Get latitude and longitude values from the form
-            var latitude = document.getElementById('latitude').value;
-            var longitude = document.getElementById('longitude').value;
-            // Emit the location update to the server
-            socket.emit('locationUpdate', {lat: parseFloat(latitude), lng: parseFloat(longitude)});
-            alert('Location sent successfully!');
-            // Clear the form
-            document.getElementById('locationForm').reset();
-        });
+        // Function to send location every 1 second
+        function sendLocation() {
+            navigator.geolocation.getCurrentPosition(function(position) {
+                // Get latitude and longitude values from Geolocation API
+                var latitude = position.coords.latitude;
+                var longitude = position.coords.longitude;
+                // Emit the location update to the server
+                socket.emit('locationUpdate', {lat: latitude, lng: longitude});
+                console.log('Location sent successfully!');
+            });
+        }
+
+        // Call sendLocation function every 1 second
+        setInterval(sendLocation, 1000);
     </script>
 </body>
 </html>
