--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
         var map = L.map('map').setView([0, 0], 13);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
+        // Add a marker to the map
+        var marker = L.marker([0, 0]).addTo(map);
+
         // Connect to the server via Socket.IO
         var socket = io();
 
@@ -25,10 +28,9 @@
         socket.on('locationUpdate', function(location) {
             // Update the marker position on the map
             marker.setLatLng([location.lat, location.lng]);
+            // Pan the map to the marker's position
+            map.panTo([location.lat, location.lng]);
         });
-
-        // Add a marker to the map
-        var marker = L.marker([0, 0]).addTo(map);
     </script>
 </body>
 </html>
